--- a/index.html
+++ b/index.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Etch-a-Sketch</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <h1>Etch-a-Sketch</h1>
+    <div class="form-container">
+      <button id="new-grid">Get new grid</button>
+    </div>
     <div class="container"></div>
     <script src="script.js"></script>
   </body>
